--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
     "autoload": {
         "psr-4": {
             "Peanut\\": "src/Peanut/"
-        }
+        },
+        "files": [
+            "src/function.php"
+        ]
     },
     "require": {
         "ext-phalcon": "*",
